<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MonQuiz</string>
    <string name="rubik_bold">rubik_bold.ttf</string>
    <string name="rubik_light">rubik_light.ttf</string>
    <string name="rubik_medium">rubik_medium.ttf</string>
    <string name="rubik_regular">rubik_regular.ttf</string>
    <string name="question_answer_font">Sansation-Bold.ttf</string>
    <string name="cheeseburger_font">cheeseburger.ttf</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_hint_email">Email Address</string>
    <string name="login_hint_password">Password</string>
    <string name="login_btn_login_label">LOGIN</string>
    <string name="login_msg_invalid_email">Valid email required</string>
    <string name="login_msg_invalid_password">Valid password required</string>
    <string name="dont_have_account">Dont have an account ? Sign Up</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="signup_btn_signp_label">SIGN UP</string>
    <string name="signup_msg_invalid_mobile">Valid mobile number required</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="categories_title">Choose Category</string>
    <string name="title_activity_pricelist">PriceListActivity</string>
    <string name="title_msg_pricelist">where you want to go?</string>
    <string name="subtitle_msg_pricelist">You can choose your price range. Based on your choice one table will allow you to join. </string>
    <string name="category_one_shot">One Shot</string>
    <string name="category_in_a_minute">In a Minute</string>
    <string name="category_team_up">Team Up</string>
    <string name="category_super_over">SuperOver</string>
    <string name="category_quiz_master">Quizmasters</string>
    <string name="Rupee">\u20B9</string>
    <string name="Rs0">\u20B9 0</string>
    <string name="Rs10">\u20B9 10</string>
    <string name="Rs20">\u20B9 20</string>
    <string name="Rs30">\u20B9 30</string>
    <string name="Rs40">\u20B9 40</string>
    <string name="Rs50">\u20B9 50</string>
    <string name="Rs60">\u20B9 60</string>
    <string name="Rs100">\u20B9 100</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="_10">10</string>
    <string name="_20">20</string>
    <string name="_30">30</string>
    <string name="_40">40</string>
    <string name="_50">50</string>
    <string name="_60">60</string>
    <string name="_100">100</string>
    <string name="_200">200</string>
    <string name="_500">500</string>
    <string name="_1000">1000</string>
    <string name="Rs10_buy">\u20B910 - BUY</string>
    <string name="Rs20_buy">\u20B920 - BUY</string>
    <string name="Rs50_buy">\u20B950 - BUY</string>
    <string name="Rs100_buy">\u20B9100 - BUY</string>
    <string name="insufficient_balance2">Insufficient Wallet Balance</string>
    <string name="insufficient_balance">Insufficient Game Wallet Balance</string>
    <string name="insufficient_balance1">Insufficient Bonus Wallet Balance</string>
    <string name="min_balance">\u20B930</string>
    <string name="password">Password</string>
    <string name="logging_in_please_wait">Logging in please wait..</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="please_enter_valid_email_address">Please enter valid email address</string>
    <string name="invalid_password_error_message">Password must contain at least one number and one uppercase and lowercase letter,and one symbol and at least 6 or more characters</string>
    <string name="users">users</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="verification_mail_is_sent_to_your_account">Verification mail is sent to your account</string>
    <string name="creating_account_please_wait">Creating account please wait..</string>
    <string name="sign_up">SignUp</string>
    <string name="Are_you_sure_do_you_want_to_exit">Are you sure do you want to exit?</string>
    <string name="categories">Categories</string>
    <string name="price">Price</string>
    <string name="no_table_found">No table found</string>
    <string name="start">Start</string>
    <string name="getStarted">Get Started</string>
    <string name="sign_in_to_play">Sign In to Play</string>
    <string name="otp_will_be_sent_to_this_number">OTP will be sent to this number \n for verification</string>
    <string name="registration_desc">Enter your mobile number to receive a verification code.</string>
    <string name="onboarding_desc">Well you have thus come this far! \n We are glad to have you onboarded</string>
    <string name="have_a_referral_code">Have a referral code?</string>
    <string name="next">Next</string>
    <string name="get_code">Get Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="country_code">Country Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="call_me">Call me</string>
    <string name="can_retry_in">Retry in</string>
    <string name="verification_code_text">Please enter verification code sent\n to</string>
    <string name="not_a_valid_referral_code">Not a valid referral code</string>
    <string name="name">Name</string>
    <string name="please_enter_valid_otp">Please enter valid otp</string>
    <string name="welcome_aboard">Welcome Aboard!</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="enter_real_name">Enter Your Real Name</string>
    <string name="enter_user_name">Choose your screen name</string>
    <string name="confirm">CONFIRM</string>
    <string name="enter_referral_code">Enter referral code</string>
    <string name="done">Done</string>
    <string name="intent_coming_from_PlayersJoined">Coming From</string>
    <string name="add_profile_pic">Add Profile Pic</string>
    <string name="photo">Photo</string>
    <string name="from_screen">fromScreen</string>
    <string name="gallery">Gallery</string>
    <string name="unable_to_select_image">Unable to select image</string>
    <string name="enter_full_name">Enter your name</string>
    <string name="please_enter_valid_user_name">Please enter valid userName</string>
    <string name="please_enter_valid_full_name">Please enter valid full name</string>
    <string name="please_enter_valid_full_name1">Full name must be minimum of 4 characters</string>
    <string name="picture_taken">Picture Taken</string>
    <string name="no_images_found">No images found</string>
    <string name="no_data_available">No data available</string>
    <string name="loading_please_wait" tools:ignore="TypographyEllipsis">Loading ...</string>
    <string name="user_name_already_exists">UserName Already exists</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="full_name">Full Name</string>
    <string name="sign_in_successful">Sign In Successful</string>
    <string name="profile">Profile</string>
    <string name="play">Play</string>
    <string name="wallet">Wallet</string>
    <string name="played">Played</string>
    <string name="won">Won</string>
    <string name="earned">Earned</string>
    <string name="refer_a_friend">Refer a friend and get a game free</string>
    <string name="congrats">Congrats!</string>
    <string name="daily_reward">You have just earned your daily claim</string>
    <string name="claim_now">claim now</string>
    <string name="invitation_message_free">Join me on MonQuiz, the ultimate quiz game. Download now! %s put my Referral Code </string>
    <string name="invitation_message_pro">Join me on MonQuiz, the ultimate quiz game. Download now! %s or %s put my Referral Code </string>
    <string name="to_get_bonus">to get bonus</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="audio_effects">Audio Effects</string>
    <string name="notifications">Notifications</string>
    <string name="rule_book">Rule Book</string>
    <string name="feed_back">Game Feedback</string>
    <string name="logout">Logout</string>
    <string name="hello_user">Hello User</string>
    <string name="select_an_amount">Select your stake</string>
    <string name="free">Free</string>
    <string name="select">Select</string>
    <string name="play_game">Play Game</string>
    <string name="select_category">Select Category</string>
    <string name="please_select_a_category">Please select a category</string>
    <string name="you_are_already_in_the_game">You are already in the game</string>
    <string name="paying">PAYING</string>
    <string name="game_money_deduction">\u0020will be deducted from your\nwallet for this game</string>
    <string name="game_credit_deduction">You will be using up %s free credits\nRemaining Credits - %s</string>
    <string name="game_credit_and_money_deduction">You will be using up %s free credits\n%s will be deducted from your wallet</string>
    <string name="dailyquiz_score">Score %s</string>
    <string name="dailyquiz_your_score">Your Score %s</string>
    <string name="dailyquiz_time_taken">In %d seconds</string>
    <string name="dailyquiz_average_stat">Avg number of questions attempted by \n others in 60 seconds is 13</string>
    <string name="pay_now">Pay Now</string>
    <string name="food">Food</string>
    <string name="get_server_time">getServerTime</string>
    <string name="get_paytm_checksum">getPaytmChecksum</string>
    <string name="verify_paytm_transaction">verifyPaytmTransaction</string>
    <string name="wait_for_next_game">WAIT FOR NEXT GAME</string>
    <string name="your_daily_limit_exceeds_500_points">Your daily limit exceeds 1000 points</string>
    <string name="waiting_for_more_players_to_join">Waiting for more players to join..</string>
    <string name="waiting_users_to_join">Waiting for opponent to join..%s</string>
    <string name="game_starting">The Game is about to start</string>
    <string name="category">Category</string>
    <string name="table">Table</string>
    <string name="player">Players</string>
    <string name="pool">Pool</string>
    <string name="winning_amount">Today\'s Stats</string>
    <string name="hash_first">#First</string>
    <string name="hash_second">#Second</string>
    <string name="hash_third">#Third</string>
    <string name="players">Players</string>
    <string name="data_tab_name">datatabname</string>
    <string name="intent_user_count_PlayersJoined">User Count</string>
    <string name="todays_stats">Today\'s Stats</string>
    <string name="amount_won">\n Amount won</string>
    <string name="player_playing">\n Players</string>
    <string name="winners">\n Winners</string>
    <string name="players_playing">Players Playing</string>
    <string name="pool_amount">Pool Amount</string>
    <string name="winner_one">Winner 1st</string>
    <string name="fifty_percentage">50%</string>
    <string name="winner_two">Winner 2nd</string>
    <string name="winner_three">Winner 3rd</string>
    <string name="twenty_percentage">20%</string>
    <string name="thirty_percentage">30%</string>
    <string name="new_otp_send_to_your_number">New OTP sent to your number</string>
    <string name="under_development">Under development</string>
    <string name="invalid_otp_please_try_after_some_time">invalid OTP please try after sometime</string>
    <string name="notification_on_off">NotificationOnOff</string>
    <string name="audio_on_off">AudioOnOff</string>
    <string name="are_you_sure_do_you_want_to_sign_out_from_application">Are you sure do you want to signout from appcalition?</string>
    <string name="add_money">Add Money</string>
    <string name="oops">Oops..</string>
</resources>