<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fonts="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlDialogClaimedPopUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/lllview"
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" />

    <RelativeLayout
        android:id="@+id/llClaimedPopup"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_below="@+id/lllview"
        android:layout_marginStart="@dimen/size_of_value_twenty_six"
        android:layout_marginLeft="@dimen/size_of_value_twenty_six"
        android:layout_marginEnd="@dimen/size_of_value_twenty_six"
        android:layout_marginRight="@dimen/size_of_value_twenty_six"
        android:background="@drawable/bg_white_curve"
        android:orientation="vertical"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/ivClaimedPopupSpiral"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.04"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:scaleX="2.2"
            android:scaleY="2.2"
            app:srcCompat="@drawable/ic_spiral" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <com.monquiz.customviews.CustomTextView
                android:id="@+id/popupHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/size_of_value_ten"
                android:gravity="center"
                android:text="@string/congrats"
                android:textAlignment="center"
                android:textColor="@color/blue_100"
                android:textSize="@dimen/font_size_of_value_eighteen"
                fonts:custom_font="@string/rubik_medium" />

            <com.monquiz.customviews.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_of_value_twenty"
                android:layout_marginTop="@dimen/size_of_value_ten"
                android:layout_marginRight="@dimen/size_of_value_twenty"
                android:gravity="center"
                android:text="@string/daily_reward"
                android:textAlignment="center"
                android:textColor="@color/black_100"
                android:textSize="@dimen/font_size_of_value_sixteen"
                fonts:custom_font="@string/rubik_light" />

            <com.monquiz.customviews.CustomTextView
                android:id="@+id/tvClaimedPopupGetCoins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black_100"
                android:textSize="@dimen/font_size_of_value_twenty_two"
                fonts:custom_font="@string/rubik_regular" />
        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/ivClaimedPopupBgImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:scaleX="1.06"
        app:srcCompat="@drawable/ic_popup_claimcoin" />

    <RelativeLayout
        android:id="@+id/rlDialogClaimedPopUpPlayGame"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_below="@+id/llClaimedPopup"
        android:layout_centerInParent="true"
        android:layout_marginTop="-30dp"
        android:layout_marginBottom="0dp"
        android:elevation="@dimen/size_of_value_ten"
        android:gravity="center"
        android:translationZ="@dimen/size_of_value_ten">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_daily_quiz_play_button" />

        <com.monquiz.customviews.CustomTextView
            android:id="@+id/tvDialogClaimedPopUpPlayGame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="PLAY GAME"
            android:textAlignment="center"
            android:textColor="#943D0D"
            android:textSize="@dimen/font_size_of_value_fourteen"
            android:textStyle="bold"
            fonts:custom_font="@string/rubik_bold" />

    </RelativeLayout>

</RelativeLayout>