<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fonts="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lltvTopicNameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/size_of_value_fifteen">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:contentDescription="@string/app_name"
        fonts:srcCompat="@drawable/ic_notifications_black" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/size_of_value_five"
        android:layout_marginLeft="@dimen/size_of_value_five"
        android:layout_weight="80"
        android:orientation="vertical">

        <com.monquiz.customviews.CustomTextView
            android:id="@+id/tvTopicName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp"
            fonts:custom_font="@string/rubik_medium" />

        <com.monquiz.customviews.CustomTextView
            android:id="@+id/tvContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="gone"
            fonts:custom_font="@string/rubik_regular" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        fonts:srcCompat="@drawable/ic_chevron_right_black" />

</LinearLayout>