<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fonts="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlDialogInsufficientBalanceBackground"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/ivDialogInsufficientBalance"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            fonts:srcCompat="@drawable/pro_ic_dialog_wallet10_white" />

        <RelativeLayout
            android:id="@+id/rlDialogInsufficientBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:visibility="visible">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_landing_no_money" />

        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlDialogInsufficientBalanceClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_of_value_sixteen">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_close_black"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

        <com.monquiz.customviews.CustomTextView
            android:id="@+id/tvDialogInsufficientBalanceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlDialogInsufficientBalance"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/oops"
            android:textAlignment="center"
            android:textColor="@color/black_80"
            android:textSize="42sp"
            android:fontFamily="@font/rubik_bold" />

        <com.monquiz.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDialogInsufficientBalanceText"
            android:layout_marginTop="@dimen/size_of_value_ten"
            android:gravity="center"
            android:text="@string/insufficient_balance"
            android:textAlignment="center"
            android:textColor="@color/black_100"
            android:textSize="18sp"
            android:fontFamily="@string/rubik_regular" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" />

            <RelativeLayout
                android:id="@+id/rlDialogInsufficientBalanceButton"
                android:layout_width="200dp"
                android:layout_height="52dp"
                android:gravity="center"
                android:background="@drawable/bluebg_curved">

               <!-- <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_daily_quiz_play_button" />-->

                <com.monquiz.customviews.CustomTextView
                    android:id="@+id/tvDialogInsufficientAddMoney"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/add_money"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="@font/rubik_semibold" />

            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>